Added /health route

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 springdoc.api-docs.path=/notifications/api-docs
 springdoc.swagger-ui.path=/notifications/swagger-ui
+
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+management.endpoints.web.base-path=/notifications/
+
